@@ -1,5 +1,12 @@
 2007-05-19  Christian Persch  <chpe@gnome.org>
 
+	* embed/ephy-cookie-manager.h:
+	* embed/mozilla/EphySingle.cpp:
+
+	Store http-only flag too.
+
+2007-05-19  Christian Persch  <chpe@gnome.org>
+
 	* lib/egg/eggtreemultidnd.c:
 
 	Include config.h.
